  are TYPE_FORWARD_ONLY, which means unbuffered result set and 
  TYPE_SCROLL_INSENSITIVE, which means buffered result set. (Andrey)

- Implemented getResultSetType() for PreparedStatement. The setter is not
  implemented because currently PreparedStatement can't do refetching and
  storing the result means the bind buffers will be correct. (Andrey)

- Added Result::getType() and implemented it in the three result set classes.
  (Andrey)

- Enabled tracing functionality when building with VC8 and up (VS2005 and up).
  (Andrey)

- Added better support for named pipes, on Windows. Use pipe:// and add the
  path to the pipe. Shared memory connections are currently not supported.
  (Andrey)

- Fixed a bug in MySQL_Connection::setSessionVariable() which led to exception
  being thrown. (Andrey)


Beta   1.0.4 - 2009-03-xx

- Prepared support for upcoming Connector/C. (Georg)

- Added Windows installer. (Georg)

- Bumping up CMake minimum version requirement from 2.4.2 to 2.6.2.
  We need the latest version for Windows. (Lawrin)

- Added "metadataUseInfoSchema" to connection propery map which allows you
  to control the use of the INFORMATION_SCHEMA for meta data. (Andrey)

- Fixed a bug in all implementations of ResultSet::relative() which was giving
  wrong return value although positioning was working correctly. (Andrey)

- Fixed a leak in MySQL_PreparedResultSet when the result was containing a BLOB
  column. (Andrey)

- Implemented MySQL_ConnectionMetaData::supportsConvert(from, to). (Andrey)

- Introduced sql::DataType::YEAR to complement MySQL's YEAR type. (Andrey)

- Introduced PreparedStatement::getMetaData(). (Andrey)

- Introduced ResultSetMetaData::isZerofill(), which is not in the JDBC
  specification. (Andrey)

- Fixed all implementations of ResultSet::isNull() to check whether the current
  position is on a real row, not isBeforeFirst() nor isAfterLast(), like all
  getXXX methods do. (Andrey)
